syntax = "proto3";

package codesourcerer_bot.database;

option go_package = "github.com/codesourcerer-bot/proto/generated";

import "shared.proto";

service DatabaseService {
  rpc Set(KeyValType) returns (ResultType) {}
  rpc Get(KeyType) returns (codesourcerer_bot.shared.CachedContents) {}
  rpc Delete(KeyType) returns (ResultType) {}
  rpc IsRetriesExhauted(KeyType) returns (ResultType) {}
}

message KeyType {
  string key = 1;
}

message KeyValType {
  string key = 1;
  codesourcerer_bot.shared.CachedContents value = 2;
}

message ResultType {
  bool result = 1;
}

